--- a/index.html
+++ b/index.html
@@ -1,102 +1,87 @@
-<<!doctype html>
-    <html lang="en">
+<!doctype html>
+<html lang="en">
 
-    <head>
-        <title>Fantasy Name Generator</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<head>
+    <title>Fantasy Name Generator</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Bootstrap CSS v5.3.2 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
 
-        <!-- Bootstrap CSS v5.2.1 -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous" />
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-
-
-    <body>
-        <header>
-            <!-- place navbar here -->
-        </header>
-        <main>
-            <!-- Main content -->
-            <div class="container">
-                <div class="text-center">
-                    <h1>Fantasy Name Generator</h1>
-                    <p>Generate a random fantasy name for your character.</p>
-                </div>
-                <!-- Form to generate a random name -->
-                <form id="fantasy-form" class="mb-4">
-                    <!-- Get the first name -->
+<body>
+    <header>
+        <h1>Fantasy Name Generator</h1>
+    </header>
+    <main>
+        <div class="container mt-5">
+            <div class="alert alert-info text-center">
+                <h4>How to Use</h4>
+                <p>Enter your first name, last name, favorite color, and other details into the form.</p>
+                <p>Choose an option from the dropdown menu.</p>
+                <p>Click the 'Generate Name' button to see your fantasy name!</p>
+            </div>
+            <div class="card shadow-lg p-4">
+                <form id="fantasy-form">
                     <div class="mb-3">
-                        <label for="name-type" class="form-label">First Name</label>
+                        <label for="firstName" class="form-label">First Name</label>
                         <input type="text" class="form-control" id="firstName" name="first-name"
                             placeholder="Enter first name" required />
                     </div>
-                    <!-- Get the last name -->
                     <div class="mb-3">
-                        <label for="name-type" class="form-label">Last Name</label>
+                        <label for="lastName" class="form-label">Last Name</label>
                         <input type="text" class="form-control" id="lastName" name="last-name"
                             placeholder="Enter last name" required />
                     </div>
-                    <!-- Get the name type -->
                     <div class="mb-3">
-                        <label for="name-type" class="form-label"> Favorite color</label>
+                        <label for="favoriteColor" class="form-label">Favorite Color</label>
                         <input type="text" class="form-control" id="favoriteColor" name="favorite-color"
                             placeholder="Enter favorite color" required />
                     </div>
-                    <!-- Get the name type -->
                     <div class="mb-3">
-                        <label for="name-type" class="form-label">Favorite animal</label>
+                        <label for="favoriteAnimal" class="form-label">Favorite Animal</label>
                         <input type="text" class="form-control" id="favoriteAnimal" name="favorite-animal"
                             placeholder="Enter favorite animal" required />
                     </div>
-                    <!-- Get favorite color -->
                     <div class="mb-3">
-                        <label for="name-type" class="form-label">Favorite color</label>
-                        <input type="text" class="form-control" id="favoriteColor" name="favorite-color"
-                            placeholder="Enter favorite color" required />
-
-                        <!-- Get road type-->
-                        <div class="mb-3">
-                            <label for="roadType" class="form-label">Road Type</label>
-                            <select class="form-select" id="roadType" name="roadType" required>
-                                <option selected disabled>Select road type</option>
-                                <option value="road">Road</option>
-                                <option value="circle">Circle</option>
-                                <option value="street">Street</option>
-                                <option value="avenue">Avenue</option>
-                                <option value="other">Other</option>
-                            </select>
-                        </div>
+                        <label for="roadType" class="form-label">Road Type</label>
+                        <select class="form-select" id="roadType" name="roadType" required>
+                            <option selected disabled>Select road type</option>
+                            <option value="road">Road</option>
+                            <option value="circle">Circle</option>
+                            <option value="street">Street</option>
+                            <option value="avenue">Avenue</option>
+                            <option value="other">Other</option>
+                        </select>
                     </div>
-                    <!-- Button to generate a random name -->
                     <div class="text-center">
-                         <!-- Change button to a div-->
-                        <div class="btn btn-primary w-100" id="generate-name" onclick="generateFullName()">Generate Name</div>
+                        <button type="button" class="btn btn-primary w-100 mb-2" id="generate-name"
+                            onclick="generateFullName()">Generate Name</button>
+                        <button type="reset" class="btn btn-secondary w-100">Reset</button>
                     </div>
                 </form>
-                <!-- Display the generated name -->
-                <div class="text-center">
+                <div class="text-center mt-4">
                     <h2>Generated Name</h2>
-                    <p id="generated-name"></p>
+                    <p id="generated-name" class="display-4 text-success"></p>
                 </div>
             </div>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; 2024 User319183</p>
+    </footer>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+</body>
 
-        </main>
-        <footer>
-            <!-- place footer here -->
-        </footer>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"></script>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"></script>
-        <script src="script.js"></script>
-    </body>
-
-    </html>
+</html>
