Made it so Generated Name is shown but the element is hidden initially and only displayed when a name is generated.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </form>
                 <!-- Generated Name Display -->
                 <div class="text-center mt-4">
-                    <h2>Generated Name</h2>
+                    <h2 class="generated-name-title hidden">Generated Name</h2>
                     <p id="generated-name" class="display-4 text-success"></p>
                 </div>
             </div>
